--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0"
+    "@types/node": "^14.10.2",
+    "@types/react": "^16.9.49",
+    "concurrently": "^5.3.0",
+    "typescript": "^4.0.2"
   }
 }
